# ChangeLog for sys-devel/gdb
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.76 2005/05/15 19:47:39 plasmaroo Exp $

  15 May 2005; <plasmaroo@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on IA64, bug #91654.

  09 May 2005; <solar@gentoo.org> files/gdb-6.3-gdbinit-stat.patch:
  - Jan Postransky writes via email gdb doesn't read .gdbinit file in current
  working directory. I suggest putting parentheses arround the last condition
  like in the attached fix.

  06 May 2005; Bryan Østergaard <kloeri@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on alpha, bug 91654.

  06 May 2005; <solar@gentoo.org>
  +files/gdb-6.2.1-200-uclibc-readline-conf.patch,
  +files/gdb-6.2.1-400-mips-coredump.patch,
  +files/gdb-6.2.1-libiberty-pic.patch, +files/gdb-6.3-pass_all-uclibc.patch,
  gdb-6.3-r3.ebuild:
  - minor touch ups for mips/x86/uclibc/pic

  06 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on sparc wrt #91654

  06 May 2005; <tester@gentoo.org> gdb-6.3-r3.ebuild:
  Mark stable on x86 and amd64 per bug #91654

  06 May 2005; Markus Rothe <corsair@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on ppc64; bug #91654

  06 May 2005; Michael Hanselmann <hansmi@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on hppa.

  06 May 2005; Michael Hanselmann <hansmi@gentoo.org> gdb-6.3-r3.ebuild:
  Stable on ppc.

*gdb-6.3-r3 (05 May 2005)

  05 May 2005; <solar@gentoo.org> +files/bfd-malloc-wrap.patch,
  -gdb-6.3-r1.ebuild, -gdb-6.3-r2.ebuild, +gdb-6.3-r3.ebuild:
  - add security patch to bfd/elfcode.h to from bug #91398

  28 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> gdb-6.3.ebuild:
  Stable on sparc

  25 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> gdb-6.3.ebuild:
  Stable on alpha.

*gdb-6.3-r2 (24 Apr 2005)

  24 Apr 2005; <solar@gentoo.org> +files/gdb-6.3-gdbinit-stat.patch,
  +gdb-6.3-r2.ebuild:
  - avoid executing arbitrary .gdbinit files in pwd that are not owned by the