@@ -1,2 +1,0 @@
-MD5 14371795b7903b816a6a88c69cace168 gdb-6.0.tar.bz2 11965008
-MD5 e9a198cbe3a3188fd75eb25ce4293d31 gdb-xfreemod-6.0.diff 29705
