@@ -1,2 +1,0 @@
-MD5 dd25473f61a3a2e1b08dee5f67ebae28 gdb-6.1.1.tar.bz2 12586670
-MD5 3e0f43b95685125b20fc866c88d1d122 gdb-6.1-hppa-01.patch.bz2 41093
