@@ -1,2 +1,0 @@
-MD5 01871f7667345262e317a1e6e1a32768 gdb-6.2.tar.bz2 12819441
-MD5 3e0f43b95685125b20fc866c88d1d122 gdb-6.1-hppa-01.patch.bz2 41093
