@@ -1,2 +1,0 @@
-MD5 3b3898cfd426e1acd5efc89560aa93ba gdb-6.2.1.tar.bz2 12820148
-MD5 3e0f43b95685125b20fc866c88d1d122 gdb-6.1-hppa-01.patch.bz2 41093
