@@ -1,2 +1,0 @@
-MD5 05b928f41fa5b482e49ca2c24762a0ae gdb-6.3.tar.bz2 13446729
-MD5 35e70c29e393433b3847527d808f59c2 gdb_init.txt.bz2 6247
