@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/Attic/gdb-6.3-r3.ebuild,v 1.10 2005/05/15 19:47:39 plasmaroo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/Attic/gdb-6.3-r3.ebuild,v 1.11 2005/05/15 21:55:35 solar Exp $
 
 inherit flag-o-matic eutils
 
@@ -23,7 +23,7 @@ LICENSE="GPL-2 LGPL-2"
 [[ ${CTARGET} != ${CHOST} ]] \
 	&& SLOT="${CTARGET}" \
 	|| SLOT="0"
-KEYWORDS="alpha amd64 ~arm hppa ia64 ~mips ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~s390"
 IUSE="nls test"
 
 RDEPEND=">=sys-libs/ncurses-5.2-r2"
